getRegion
